FEATURE: Add lastCaptureData for BubbleCalendar EmbeddedCDX: add ability to query local cdx if remote fails, overridable method